--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="Mainprompt">
             <img class="image" src="images/catflower.jpg"></img>
             <h1 class="hh" id="name">Hey beautiful!</h1>
-            <p class="pp" id="question">Will you be my Valentine?</p>
+            <p class="pp" id="question">Will you marry me (0rca)</p>
             <div class="buttons">
                 <button id="no-button" onclick="showMessage('No')">No</button>
                 <button onclick="showMessage('Yes')" id="yesButton">Yes</button>
@@ -22,7 +22,7 @@
                 <p>Nice try, but you can't escape that easily!</p>
             </div>
             <div class="hidden-message" id="yes-message">
-                <p>YAY! See you on the 14th, babygirl. (by brian btw 🥱😎)</p>
+                <p>YAY! i love you. (by orca btw 🥱😎)</p>
             </div>
         </div>
     </div>
